# sotatek-assessment

./: .gitignore  README.md  app.py  dino_pattern_detector.py  main.ipynb  pyproject.toml  requirements.txt  utils.py
