[project]
name = "sotatek-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.15.0",
    "matplotlib>=3.10.9",
    "opencv-python>=4.13.0.92",
    "scikit-learn>=1.8.0",
    "timm>=1.0.27",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]
